Several findBugs tool fixes.